--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "TFTBot"
+crate-type = ["cdylib"]
 
 [dependencies]
-rand = "0.8.5"
+pyo3 = { version = "0.17.1", features = ["extension-module"] }
