--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2021"
 [dependencies]
 rand = "0.8.5"
 num-traits = "0.2"
+env_logger = "0.10.0"
+log = "0.4.0"
+
+[env]
+RUST_LOG="info"
+RUST_BACKTRACE=1
