--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
-/target
-Coursework/~$TBot Coursework Main Document.docx
-Coursework/~WRL0003.tmp
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
