--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ dist-ssr
 Coursework/~$TBot Coursework Main Document.docx
 Coursework/~WRL0396.tmp
 Coursework/~WRL0959.tmp
+Coursework/~WRL2523.tmp
