--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ Coursework/~$TBot Coursework Main Document.docx
 Coursework/~WRL0396.tmp
 Coursework/~WRL0959.tmp
 Coursework/~WRL2523.tmp
+Coursework/~WRL3004.tmp
